début ajout information

--- a/index.html
+++ b/index.html
@@ -6,6 +6,51 @@
     <link href="style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-    
+	<header>
+		<h1>Week-end en famille</h1>
+		<nav>
+			<ul>
+				<li><a href="#destination">Destination</a></li>
+				<li><a href="#activites">Activités</a></li>
+				<li><a href="#logement">Logement</a></li>
+				<li><a href="#contact">Contact</a></li>
+			</ul>
+		</nav>
+	</header>
+
+	<main>
+		<section id="destination">
+			<h2>Destination</h2>
+			<p>La destination de notre week-end en famille est...</p>
+			<img src="destination.jpg" alt="Photo de la destination">
+		</section>
+
+		<section id="activites">
+			<h2>Activités</h2>
+			<p>Pendant notre week-end en famille, nous prévoyons de faire les activités suivantes :</p>
+			<ul>
+				<li>Randonnée pédestre</li>
+				<li>Baignade</li>
+				<li>Pique-nique</li>
+				<li>Visite d'un parc d'attractions</li>
+			</ul>
+		</section>
+
+		<section id="logement">
+			<h2>Logement</h2>
+			<p>Nous avons réservé un hébergement dans un(e)...</p>
+			<img src="logement.jpg" alt="Photo de l'hébergement">
+		</section>
+
+		<section id="contact">
+			<h2>Contact</h2>
+			<p>Pour plus d'informations sur notre week-end en famille, veuillez nous contacter à l'adresse suivante :</p>
+			<a href="mailto:contact@weekendenfamille.com">contact@weekendenfamille.com</a>
+		</section>
+	</main>
+
+	<footer>
+		<p>&copy; 2023 Week-end en famille</p>
+	</footer>
 </body>
 </html>
