--- a/index.html
+++ b/index.html
@@ -6,51 +6,39 @@
     <link href="style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-	<header>
-		<h1>Week-end en famille</h1>
-		<nav>
-			<ul>
-				<li><a href="#destination">Destination</a></li>
-				<li><a href="#activites">Activités</a></li>
-				<li><a href="#logement">Logement</a></li>
-				<li><a href="#contact">Contact</a></li>
-			</ul>
-		</nav>
-	</header>
+	<h1>Week-end en famille</h1>
 
-	<main>
-		<section id="destination">
-			<h2>Destination</h2>
-			<p>La destination de notre week-end en famille est...</p>
-			<img src="destination.jpg" alt="Photo de la destination">
-		</section>
+	<section id="section1">
+		<h2>par ici le programme</h2>
+		<img src="programme.png" alt="Programme du Week-end">
+		<img src="vonnispong.png" alt="Programme du Week-end">
+	</section>
 
-		<section id="activites">
-			<h2>Activités</h2>
-			<p>Pendant notre week-end en famille, nous prévoyons de faire les activités suivantes :</p>
-			<ul>
-				<li>Randonnée pédestre</li>
-				<li>Baignade</li>
-				<li>Pique-nique</li>
-				<li>Visite d'un parc d'attractions</li>
-			</ul>
-		</section>
+	<section id="check_liste">
+		<h2>la check liste</h2>
+		<ul>
+			<li>truc 1</li>
+			<li>truc 2</li>
+			<li>truc 3</li>
+			<li>truc 4</li>
+		</ul>
+	</section>
 
-		<section id="logement">
-			<h2>Logement</h2>
-			<p>Nous avons réservé un hébergement dans un(e)...</p>
-			<img src="logement.jpg" alt="Photo de l'hébergement">
-		</section>
+	<section id="lieu">
+		<h2>lieu</h2>
+		<p>Nous serons logés dans la MFR de Saint Romain de Popey</p>
+		<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11114.189141427887!2d4.5380625!3d45.8603591!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47f461d0f6fae20b%3A0x5427c081a9cf209b!2sMaison%20Familiale%20Et%20Rurale%20de%20Saint%20Romain%20de%20Popey!5e0!3m2!1sfr!2sfr!4v1681647468129!5m2!1sfr!2sfr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+	</section>
 
-		<section id="contact">
-			<h2>Contact</h2>
-			<p>Pour plus d'informations sur notre week-end en famille, veuillez nous contacter à l'adresse suivante :</p>
-			<a href="mailto:contact@weekendenfamille.com">contact@weekendenfamille.com</a>
-		</section>
-	</main>
+	<section id="contact">
+		<h2>Contact</h2>
+		<p>Pour plus d'informations sur notre week-end en famille, veuillez nous contacter aux numéros suivants:</p>
+		<p>Carine : 07 78 38 84 99</p>
+		<p>Benoit : 06 87 21 94 88 (privilégier les autres !)</a>
+		<p>Carole : 06 82 20 08 99</p>
+		<p>Raphaël : 06 08 14 40 02</p>
+		<p>Jerôme : 06 20 51 63 93</p>
+	</section>
 
-	<footer>
-		<p>&copy; 2023 Week-end en famille</p>
-	</footer>
 </body>
 </html>
