--- a/page1.html
+++ b/page1.html
@@ -1,18 +1,44 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
     <title>week end cousin</title>
-    <link href="style_page1.css" rel="stylesheet" type="text/css">
+    <link href="style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
+	<h1>Week-end en famille</h1>
 
-    <h1>allez on remet ça !</h1>
-    <h1>week-end cousins</h1>
+	<section id="section1">
+		<h2>par ici le programme</h2>
+		<img src="programme.png" alt="Programme du Week-end">
+		<img src="vonnispong.png" alt="Programme du Week-end">
+	</section>
 
-    <button>
-        <a href="index.html">cliquez ici</a>
-    </button>
+	<section id="check_liste">
+		<h2>la check liste</h2>
+		<ul>
+			<li>truc 1</li>
+			<li>truc 2</li>
+			<li>truc 3</li>
+			<li>truc 4</li>
+		</ul>
+	</section>
+
+	<section id="lieu">
+		<h2>lieu</h2>
+		<p>Nous serons logés dans la MFR de Saint Romain de Popey</p>
+		<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11114.189141427887!2d4.5380625!3d45.8603591!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47f461d0f6fae20b%3A0x5427c081a9cf209b!2sMaison%20Familiale%20Et%20Rurale%20de%20Saint%20Romain%20de%20Popey!5e0!3m2!1sfr!2sfr!4v1681647468129!5m2!1sfr!2sfr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+	</section>
+
+	<section id="contact">
+		<h2>Contact</h2>
+		<p>Pour plus d'informations sur notre week-end en famille, veuillez nous contacter aux numéros suivants:</p>
+		<p>Carine : 07 78 38 84 99</p>
+		<p>Benoit : 06 87 21 94 88 (privilégier les autres !)</a>
+		<p>Carole : 06 82 20 08 99</p>
+		<p>Raphaël : 06 08 14 40 02</p>
+		<p>Jerôme : 06 20 51 63 93</p>
+	</section>
 
 </body>
 </html>
