--- a/page1.html
+++ b/page1.html
@@ -11,16 +11,21 @@
 	<section id="section1">
 		<h2>par ici le programme</h2>
 		<img src="programme.png" alt="Programme du Week-end">
-		<img src="vonnispong.png" alt="Programme du Week-end">
 	</section>
 
 	<section id="check_liste">
 		<h2>la check liste</h2>
 		<ul>
-			<li>truc 1</li>
-			<li>truc 2</li>
-			<li>truc 3</li>
-			<li>truc 4</li>
+			<li>Sac à dos</li>
+			<li>Gourdes</li>
+			<li>Draps 90 ou sacs de couchage</li>
+			<li>Vêtements de pluie</li>
+			<li>Baskets</li>
+			<li>Pique nique du samedi midi</li>
+			<li>Un dessert (gateau, tarte,cake) à mettre en commun</li>
+			<li>Boules de pétanque</li>
+			<li>Molky</li>
+			<li>Jeux de société</li>
 		</ul>
 	</section>
 
