--- a/index.html
+++ b/index.html
@@ -7,12 +7,17 @@
 </head>
 <body>
 
-    <h1>allez on remet ça !</h1>
-    <h1>week-end cousins</h1>
+    <div>
+    <h1>Allez on remet ça !</h1>
+    <h1>Week-end cousins</h1>
 
     <button>
-        <a href="page1.html">cliquez ici</a>
+        <a href="page1.html">N'appuyez pas là !</a>
     </button>
+    <button>
+        <a href="page1.html">Appuyez ici !</a>
+    </button>
+    </div>
 
 </body>
 </html>
