--- a/page1.html
+++ b/page1.html
@@ -14,7 +14,7 @@
 	</section>
 
 	<section id="check_liste">
-		<h2>la check liste</h2>
+		<h2>la check list</h2>
 		<ul>
 			<li>Sac à dos</li>
 			<li>Gourdes</li>
