--- a/index.html
+++ b/index.html
@@ -4,16 +4,22 @@
     <meta charset="utf-8">
     <title>week end cousin</title>
     <link href="style_page1.css" rel="stylesheet" type="text/css">
+    <script src="js.js"></script>
 </head>
+
 <body>
 
     <div>
     <h1>Allez on remet ça !</h1>
     <h1>Week-end cousins</h1>
 
-    <button>
-        <a href="page1.html">N'appuyez pas là !</a>
+    <button onclick="playAudio()">
+        N'appuyez pas là !
     </button>
+    <audio id="myAudio">
+      <source src="test.mp3" type="audio/mpeg">
+    </audio>
+
     <button>
         <a href="page1.html">Appuyez ici !</a>
     </button>
