--- a/page1.html
+++ b/page1.html
@@ -8,6 +8,10 @@
 <body>
 	<h1>Week-end en famille</h1>
 
+	<section>
+		<a href="https://goo.gl/maps/hgfMEsp5NFe82Nvi8"><h2>Lieu de rendez-vous</h2></a>	
+	</section>
+
 	<section id="section1">
 		<h2>par ici le programme</h2>
 		<img src="programme.png" alt="Programme du Week-end">
